finished footer and corrected some alignments issues

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,9 +3,16 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+a {
+	color: #1c5380;
+	text-decoration: none;
+}
 
 h3 {
 	color: #06365f;
+}
+small {
+	font-size: 10px;
 }
 
 #container {
@@ -31,30 +38,55 @@ h3 {
 	float: left;
 	width: 57%;
 }
+
 #footer {
 	clear: both;
-}	
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: bold;
+	padding-top: 50px;
+}
+
+#footer ul li {
+	text-decoration: none;
+	display: inline;
+	padding-right: 20px;
+}
+
 #textboxbackground {
 	background: #ffffff;
 	background: url("../images/frame.png");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-	padding: 20px 30px 0px 30px;
+	padding: 20px 40px 0px 40px;
 }
 
 #right-header {
-	width: 100%;
+	display: inline;
 }
 
 #instalogo {
-	width: 100%;
-	margin-right:0px;
+	display: inline;
 }
 
-#instalogo img{
-	width: 230px;
+#button {
+	background-color: #1c5380;
+	background: url("../images/home.png");
+	background-repeat: no-repeat;
+	background-position: 5px 9px;
+	display: inline;
+	float: right;
+	color: #ffffff;
+	text-align: right;
+	font-size: 14px;
+	font-weight: bold; 
+	width: 75px;
+	height: 35px;
+	border: 1px solid #06365f;
+	border-radius: 3px;
+	margin: 18px 10px 0px 0px;
+	padding: 8px 5px 0px 0px;
 }
-
 
 .inline-block {
 	display: inline-block;
@@ -64,14 +96,11 @@ h3 {
 	clear: both;
 }
 
-button {
-	width: 100px;
-	height: 40px;
-	background: url("../images/bgtile.png");
-	border: 2px solid #1c5380;
-	border-radius: 3px;
-
+span {
+  display: inline-block;
+  vertical-align: middle;
 }
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
